Fixed a layout issue in the bookmark list in mosaic mode when a title is too long

--- a/web/ui/styles/bookmark-list.scss
+++ b/web/ui/styles/bookmark-list.scss
@@ -111,6 +111,7 @@
     a {
       @apply overflow-hidden text-ellipsis;
       @apply block font-semibold text-left;
+      word-break: break-word;
     }
   }
 
